# to-do-app-phase-iii

./: .gitignore  CLAUDE.md  MANUAL_TESTING_GUIDE.md  list_backend_routes.py  verify_backend.py  verify_frontend.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_setup.py  pyproject.toml  test_auth.py  test_tasks.py  todo_local.db.bak
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tasks_table.py  002_create_users_table.py  9752bcdaf889_create_refresh_tokens_table.py  e16e886738d6_add_description_to_tasks.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/agent/: __init__.py  chat_agent.py  config.py  intent_classifier.py  response_formatter.py  schemas.py  tool_mapper.py
backend/src/auth/: dependencies.py
backend/src/mcp/: errors.py  schemas.py
backend/src/middleware/: error_handler.py  logging.py  rate_limit.py  request_id.py
backend/src/models/: auth_event.py  refresh_token.py  task.py  user.py
backend/src/repositories/: auth_event_repository.py  refresh_token_repository.py  task_repository.py  user_repository.py
backend/src/routers/: auth.py  chat.py  tasks.py
backend/src/schemas/: auth.py  error.py  task.py
backend/src/services/: auth_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/agent/: test_integration.py  test_us1_create_task.py  test_us2_list_tasks.py  test_us3_us4_us5_operations.py
backend/tests/contract/: test_api_contracts.py
backend/tests/integration/: test_auth_refresh.py  test_task_flows.py
frontend/: README.md  (+3 more)
(+117 files in other folders)
